@@ -532,7 +532,10 @@ Several built-in callbacks, such as <function>CLUTTER_ALPHA_SINE</function>, all
 <para>You should then provide this <classname>ClutterEffectTemplate</classname> to one of the <function>clutter_effect</function> 
 functions, along with the actor and any extra parameters required by that function. Remember to unref the effect template after providing it to the effect function 
 (which will take a reference). Unlike actors, these do not have &quot;floating references&quot;.
-</para> 
+</para>
+<para>To make it easier to use different timelines with different effects, you can use <function>clutter_effect_template_set_timeline_clone()</function> to cause the 
+effect to clone (copy instead of just referencing) the timeline, allowing you to change the original timeline and supply it to a second effect, without 
+influencing the first effect.</para>
 
 <para>The effects API is actually a simplified API that wraps the <classname>ClutterBehaviour</classname> objects. 
 However, the effect functions can only control one actor at a time and do not allow you to change the effects while the timeline 
@@ -752,7 +755,11 @@ their application.
 
 
 <appendix id="appendix-using-opengl-directly">
-<title>Using OpenGL ES Directly</title>
+<title>Using OpenGLDirectly</title>
+<para>You can conveniently detect whether the platform has support for either the OpenGL or OpenGL ES API by ifdefing for 
+<literal>CLUTTER_COGL_HAS_GL</literal> or <literal>CLUTTER_COGL_HAS_GLES</literal>. This allows you to write code for both.
+</para>
+
 <para>
 TODO:
 How to get the appropriate OpenGL resources so that you can use OpenGL calls directly, to use features not 
