@@ -1,5 +1,9 @@
 2007-12-17  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/tutorial/clutter-tut.xml: Effects: Mention optional timeline cloning when using effects.
+
+2007-12-17  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/tutorial/clutter-tut.xml: Actors: Added clipping sub-section, after talking to Ebassi.
 
 2007-12-17  Murray Cumming  <murrayc@murrayc.com>
